Fixed Post Overlapping side and colored white

--- a/src/app/feed/post/post.component.scss
+++ b/src/app/feed/post/post.component.scss
@@ -8,9 +8,10 @@
 .post {
   display: block;
   border-radius: 20px;
+  background-color: var(--mat-surface);
   box-shadow: CP.$Secondary-color 0px 0px 5px;
   z-index: 20;
-  max-width: 110vh;
+  max-width: 47vw;
   margin: 0 auto;
 }
 
@@ -27,13 +28,13 @@
   display: grid;
   width: 37%;
   position: absolute;
-  right: 9vh;
+  right: 5px;
   grid-template-columns: 50% 50%;
-  font-size: 1.2em;
   text-align: center;
   color: #3f422ec4;
 }
 .text {
+  color: var(--mat-on-surface);
   font-size: 1.5em;
 }
 
